Добавил возможность полностью редактировать персонажей через консоль ГМ-а
